Add about section

--- a/src/styles/style.styl
+++ b/src/styles/style.styl
@@ -1,7 +1,9 @@
 @import './fonts.styl'
 @import './variables.styl'
 @import './components/box-sizing.styl'
+@import './components/visually-hidden.styl'
 @import './components/container.styl'
 @import './components/social.styl'
 @import './components/page.styl'
+@import './components/inspo.styl'
 @import './components/footer.styl'
