Add promo section

--- a/src/styles/fonts.styl
+++ b/src/styles/fonts.styl
@@ -10,6 +10,15 @@
 @font-face
 	font-family 'Big Shoulders Display'
 	font-style normal
+	font-weight 800
+	font-display swap
+	src local(''),
+		url('../fonts/big-shoulders-display-900.woff2') format('woff2'),
+		url('../fonts/big-shoulders-display-900.woff') format('woff')
+
+@font-face
+	font-family 'Big Shoulders Display'
+	font-style normal
 	font-weight 900
 	font-display swap
 	src local(''),
