--- a/src/styles/style.styl
+++ b/src/styles/style.styl
@@ -3,7 +3,9 @@
 @import './components/box-sizing.styl'
 @import './components/visually-hidden.styl'
 @import './components/container.styl'
+@import './components/button.styl'
 @import './components/social.styl'
 @import './components/page.styl'
-@import './components/inspo.styl'
+@import './components/promo.styl'
+@import './components/about.styl'
 @import './components/footer.styl'
