Add contacts & map

--- a/src/styles/components/button.styl
+++ b/src/styles/components/button.styl
@@ -27,6 +27,15 @@
         background-position center
         background-size 8px 24px
 
+    &--back
+        padding-right 32px
+        padding-left 91px
+
+        &::before
+            left 0
+            right auto
+            background-image url('../images/icon-arrow-left.svg')
+
     &:hover,
     &:focus
         background-color color-gold
