--- a/src/styles/components/page.styl
+++ b/src/styles/components/page.styl
@@ -13,4 +13,7 @@
     color color-grey
 
     &__main
+        display flex
+        flex-wrap nowrap
+        flex-direction column
         flex-grow 1
