--- a/src/styles/style.styl
+++ b/src/styles/style.styl
@@ -8,4 +8,5 @@
 @import './components/page.styl'
 @import './components/promo.styl'
 @import './components/about.styl'
+@import './components/contacts.styl'
 @import './components/footer.styl'
