--- a/src/styles/components/promo.styl
+++ b/src/styles/components/promo.styl
@@ -56,6 +56,7 @@
         grid-template-areas "title image text"
         grid-template-columns 450px 540px 350px
         justify-content center
+        margin-bottom 180px
         background-image linear-gradient(to right, color-black 0, color-black 50%, color-white 0)
 
         &__title
